data/derived/fa15/progs/unify/prog1750.ml.out
Characters 182-183:
  let args = List.combine (List.rev (l1@0)) (List.rev (l2@0)) in
                                        ^
Error: This expression has type int but an expression was expected of type
         'a list
